--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
 #   - title: "About"
 #     url: /about/
-   - title: "Publications"
-     url: /publications/
+   - title: "Projects"
+     url: /projects/
    - title: "CV"
      url: /cv/
 
